feat: delete pet search
